--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
   <link href="/static/fa5/css/all.css" rel="stylesheet">
-  
+
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -62,11 +62,11 @@
 
         <a class="nav-link" id="accounts-link" href="/accounts"> <i class="fas fa-users-cog"></i> Accounts
         </a>
-
+        <!-- 
         <a class="nav-link" id="datasets-link" href="/datasets"> <i class="fas fa-database"></i> Datasets
-        </a>
+        </a> -->
 
-        <a class="nav-link" id="datasets-link" href="/datasetsNew"> <i class="fas fa-database"></i> DatasetsNew
+        <a class="nav-link" id="datasets-link" href="/datasetsNew"> <i class="fas fa-database"></i> Datasets
         </a>
         {% endif %}
       </ul>
