--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -27,12 +27,12 @@
 
     a {
       color: #5F698E;
-      /* 设置链接颜色为深灰色 */
+      /* Set color of link into dark grey */
     }
 
     a:hover {
       color: #0F71F2;
-      /* 设置鼠标悬停时的链接颜色为浅灰色 */
+      /* Set the link color when the mouse is paused to light gray */
     }
   </style>
 </head>
@@ -62,9 +62,6 @@
 
         <a class="nav-link" id="accounts-link" href="/accounts"> <i class="fas fa-users-cog"></i> Accounts
         </a>
-        <!-- 
-        <a class="nav-link" id="datasets-link" href="/datasets"> <i class="fas fa-database"></i> Datasets
-        </a> -->
 
         <a class="nav-link" id="datasets-link" href="/datasetsNew"> <i class="fas fa-database"></i> Datasets
         </a>
@@ -77,8 +74,6 @@
       {% else %}
       <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
       {% endif %}
-
-
     </div>
   </nav>
   {% block content %}{% endblock %}
